@@ -204,6 +204,10 @@ CVS code -
 	- Add a new section 4.4, and move all section 4 entries after it
 	  down one number, to explain how to deal with problems typing
 	  Meta-[. (DLR)
+	- Add a new section 4.5, and move all section 4 entries after it
+	  down one number, to explain a problem that can occur when
+	  holding down keys to generate Meta sequences. (Benno
+	  Schulenberg, minor tweaks by DLR)
 	- Add a few capitalization and wording fixes. (DLR)
 - doc/nano.1, doc/nanorc.5, doc/rnano.1, doc/nano.texi:
 	- Update the copyright years to include 2006. (DLR)
